<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="73dp">

    <EditText
        android:id="@+id/editTextModeCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/TextBtnPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/invalidPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invalidPassword"
        android:textColor="@color/RED"
        android:gravity="center"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnAnnulerPasserCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/TextBtnCancel" />

        <Button
            android:id="@+id/btnPasserCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/TextBtnOK" />

    </LinearLayout>
</android.widget.LinearLayout>