<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".CategoryActivity">

    <EditText
        android:id="@+id/ed_cat_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/NewCategory"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnValiderCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sousCategories"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/lv_category"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"/>

        <ListView
            android:layout_weight="1"
            android:id="@+id/lv_sub_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <Button
        android:text="@string/quitter"
        android:onClick="CategoryResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

</LinearLayout>